--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,6 +1,9 @@
 <div class="box">
   <div class="inner">
-    <div class="pic-slideshow">(picture slideshow here)</div>
+    <div class="pic-slideshow">
+      <p>(picture slideshow here)</p>
+      <app-carousel></app-carousel>
+    </div>
     <div class="content">
       <h1>Fleigle's Flyers</h1>
       <h3>
@@ -17,6 +20,20 @@
       distinctio consequatur quibusdam debitis illo odio, mollitia commodi harum
       nostrum. Velit, quidem.
     </div>
-    <div class="socials">(social media tags/links here)</div>
+    <div class="socials">
+      <p>(social media tags/links here)</p>
+      <img
+        class="social"
+        (click)="socialRoute('facebook')"
+        src="../../../../icons/facebook-icon.svg"
+        alt="facebook icon"
+      />
+      <img
+        class="social"
+        (click)="socialRoute('instagram')"
+        src="../../../../icons/insta-icon.svg"
+        alt="instagram icon"
+      />
+    </div>
   </div>
 </div>
