--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,3 +1,5 @@
 <nav>
-  <div class="first">Fleigle's Flyers</div>
+  <div class="item first">Fleigle's Flyers</div>
+  <div class="item second">Coaches' Bio</div>
+  <div class="item third">Registration</div>
 </nav>
