--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -1,7 +1,6 @@
 .box {
   outline: 1px solid black;
   padding: 2rem;
-  margin: 1rem;
   .inner,
   .content,
   .history {
@@ -11,16 +10,28 @@
     justify-content: center;
     align-items: center;
   }
-  .pic-slideshow,
-  .calendar,
   .socials {
-    outline: 2px solid red;
+    margin-top: 2rem;
   }
   .history {
-    width: 50%;
     overflow-y: scroll;
   }
-  .social {
-    cursor: pointer;
-  }
+}
+
+.content-outer {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+
+h1 {
+  font-size: 3.5rem;
+  font-weight: 600;
+  text-shadow: -2px -2px 0 var(--light-blue), 2px -2px 0 var(--light-blue),
+    2px 2px 0 var(--light-blue), 2px 2px 0 var(--light-blue);
+}
+
+section {
+  display: flex;
+  justify-content: space-evenly;
 }
