change color nav item

--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -5,7 +5,7 @@ nav {
   justify-content: space-evenly;
   padding: 0.3rem;
   .item {
-    background-color: blue;
+    background-color: var(--light-blue);
     width: fit-content;
     padding: 0.2rem 2rem;
     font-size: 2rem;
