--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,5 +1,5 @@
 <nav>
-  <div class="item first">Fleigle's Flyers</div>
-  <div class="item second">Coaches' Bio</div>
-  <div class="item third">Registration</div>
+  <div class="item first" (click)="navigate('home')">Fleigle's Flyers</div>
+  <div class="item second" (click)="navigate('bio')">Coaches' Bio</div>
+  <div class="item third" (click)="navigate('registration')">Registration</div>
 </nav>
