--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,30 +1,23 @@
-<div class="box">
-  <div class="inner">
-    <section>
-      <div class="pic-slideshow">
-        <app-carousel></app-carousel>
-      </div>
-      <div class="content-outer">
-        <div class="content">
-          <h1>Fleigle's Flyers</h1>
-          <h3>
-            Fleigle's Athletics is a Sports Performance and Human Development
-            Track and Field Club Located in Minnesota.
-          </h3>
-        </div>
-        <div class="calendar">(upcoming events, calendar slideshow here)</div>
-        <div class="history">
-          (history etc.) Lorem ipsum dolor sit amet consectetur adipisicing
-          elit. Itaque libero sint inventore vel commodi explicabo nisi cumque,
-          dolores nam corrupti. Corporis sapiente error voluptate maxime aliquid
-          doloribus unde maiores nulla, quos libero repudiandae est vel omnis at
-          impedit distinctio consequatur quibusdam debitis illo odio, mollitia
-          commodi harum nostrum. Velit, quidem.
-        </div>
-      </div>
-    </section>
-    <div class="socials">
-      <app-socials></app-socials>
+<div class="container">
+  <div class="pic-slideshow">
+    <app-carousel></app-carousel>
+  </div>
+  <div class="content-outer">
+    <div class="content">
+      <h2>Who We Are</h2>
+      <h3>
+        Fleigle's Athletics is a Sports Performance and Human Development Track
+        and Field Club Located in Minnesota.
+      </h3>
+    </div>
+    <div class="calendar">(upcoming events, calendar slideshow here)</div>
+    <div class="history">
+      (history etc.) Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Itaque libero sint inventore vel commodi explicabo nisi cumque, dolores
+      nam corrupti. Corporis sapiente error voluptate maxime aliquid doloribus
+      unde maiores nulla, quos libero repudiandae est vel omnis at impedit
+      distinctio consequatur quibusdam debitis illo odio, mollitia commodi harum
+      nostrum. Velit, quidem.
     </div>
   </div>
 </div>
