--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,4 +1,11 @@
-<div class="container">
+<!-- <div class="container"> -->
+<div
+  [ngClass]="{
+    'flex-row': !globalState.isMobile(),
+    'flex-column': globalState.isMobile()
+  }"
+  class="container"
+>
   <div class="pic-slideshow">
     <app-carousel></app-carousel>
   </div>
