--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -4,7 +4,7 @@
     'flex-row': !globalState.isMobile(),
     'flex-column': globalState.isMobile()
   }"
-  class="container"
+  class="container1"
 >
   <div class="pic-slideshow">
     <app-carousel></app-carousel>
