--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -31,10 +31,6 @@ nav {
       display: flex;
       justify-content: space-evenly;
       width: 50%;
-      * {
-        color: var(--white);
-        text-decoration: none;
-      }
     }
   }
   .title {
@@ -62,4 +58,43 @@ nav {
 
 .hamburger {
   width: 30px;
+  cursor: pointer;
+}
+
+.dropdown-container {
+  position: relative;
+}
+
+.dropdown {
+  position: absolute;
+  top: 30px;
+  left: -30px;
+  z-index: 2;
+  background-color: gray;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.link {
+  color: var(--white);
+  text-decoration: none;
+}
+
+@media screen and (max-width: 1000px) {
+  nav {
+    .top-strip {
+      .links {
+        width: 80%;
+      }
+    }
+    .title {
+      h1 {
+        font-size: 4rem;
+      }
+    }
+  }
 }
