--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,4 +1,3 @@
-<!-- <div class="container"> -->
 <div
   [ngClass]="{
     'flex-row': !globalState.isMobile(),
@@ -9,7 +8,10 @@
   <div class="pic-slideshow">
     <app-carousel></app-carousel>
   </div>
-  <div class="content-outer">
+  <div
+    class="content-outer"
+    [ngClass]="globalState.isMobile() ? ['bg-white'] : ['width-50']"
+  >
     <div class="content">
       <h2>Who We Are</h2>
       <h3>
