--- a/src/app/components/carousel/carousel.component.scss
+++ b/src/app/components/carousel/carousel.component.scss
@@ -1,8 +1,31 @@
 img {
-  width: 30px;
+  height: 400px;
+  object-fit: cover;
 }
 
 .carousel {
-  width: 300px;
-  height: 300px;
+  width: 400px;
+  height: 400px;
+}
+
+@media screen and (max-width: 500px) {
+  img {
+    height: 300px;
+  }
+
+  .carousel {
+    height: 300px;
+    width: 300px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  img {
+    height: 300px;
+  }
+
+  .carousel {
+    height: 300px;
+    width: 250px;
+  }
 }
