--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -25,7 +25,7 @@
     <div class="col">
       <h3 class="header">About</h3>
       <a href="">Who We Are</a>
-      <a href="">Meet the Coaches</a>
+      <a [routerLink]="'coaches'">Meet the Coaches</a>
       <a href="">Contact</a>
     </div>
     <div class="col">
