--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -47,6 +47,12 @@ nav {
 
 .emblem {
   width: 130px;
+  cursor: pointer;
+  transition: 0.4s;
+  &:hover {
+    scale: 1.03;
+    transform: rotate(2deg);
+  }
 }
 
 .icon {
