--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,14 @@
 
 @font-face {
   font-family: "dmsans";
-  src: url("/font/static/DMSans-Regular.ttf") format("truetype");
+  src: url("/font/dmsans/DMSans-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "roboto1";
+  src: url("/font/roboto/Roboto-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
@@ -16,7 +23,9 @@
 body,
 html {
   box-sizing: border-box;
-  font-family: "dmsans", serif;
+  font-family: "roboto1", "dmsans", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
 }
 
 body {
