update coaches names/titles

--- a/src/app/views/coaches/coaches.component.html
+++ b/src/app/views/coaches/coaches.component.html
@@ -7,7 +7,8 @@
         src="../../../../images/headshots/esther1.jpg"
         alt="esther headshot"
       />
-      <p>Esther</p>
+      <p class="name">Esther Fleigle</p>
+      <p>Head Coach/Owner<br />Pole Vault</p>
     </div>
     <div class="overlay">
       <img
@@ -15,7 +16,8 @@
         src="../../../../images/headshots/matt1.jpg"
         alt="matt headshot"
       />
-      <p>Matt</p>
+      <p class="name">Matt Fleigle</p>
+      <p>Head Coach/Owner<br />Pole Vault</p>
     </div>
     <div class="overlay">
       <img
@@ -23,7 +25,8 @@
         src="../../../../images/headshots/terra1.jpg"
         alt="terra headshot"
       />
-      <p>Terra</p>
+      <p class="name">Terra McMahon</p>
+      <p>Head Coach/Team Manager<br />Horizontals & Sprints</p>
     </div>
     <div class="overlay">
       <img
@@ -31,7 +34,8 @@
         src="../../../../images/headshots/drei1.jpg"
         alt="drei headshot"
       />
-      <p>Drei</p>
+      <p class="name">Andreiana Aurelius</p>
+      <p>Assistant Coach<br />Hurdles</p>
     </div>
     <div class="overlay">
       <img
@@ -39,7 +43,8 @@
         src="../../../../images/headshots/lucie1.jpg"
         alt="lucie headshot"
       />
-      <p>Lucie</p>
+      <p class="name">Lucie Felt</p>
+      <p>Media Intern<br />Photography</p>
     </div>
     <div class="overlay">
       <img
@@ -47,7 +52,8 @@
         src="../../../../images/headshots/ian1.jpg"
         alt="ian headshot"
       />
-      <p>Ian</p>
+      <p class="name">Ian Harder</p>
+      <p>Assistant Coach<br />Throws</p>
     </div>
     <div class="overlay">
       <img
@@ -55,7 +61,8 @@
         src="../../../../images/headshots/cameron1.jpg"
         alt="cameron headshot"
       />
-      <p>Cameron</p>
+      <p class="name">Cameron Schulz</p>
+      <p>Assistant Coach<br />High Jump/Javelin</p>
     </div>
   </div>
 </div>
