--- a/src/app/views/coaches/coaches.component.html
+++ b/src/app/views/coaches/coaches.component.html
@@ -8,7 +8,7 @@
         alt="esther headshot"
       />
       <p class="name">Esther Fleigle</p>
-      <p>Head Coach/Owner<br />Pole Vault</p>
+      <p>Head Coach & CEO<br />Pole Vault</p>
     </div>
     <div class="overlay">
       <img
