--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -19,7 +19,6 @@
         and Field Club Located in Minnesota.
       </h3>
     </div>
-    <div class="calendar">(upcoming events, calendar slideshow here)</div>
     <div class="history">
       (history etc.) Lorem ipsum dolor sit amet consectetur adipisicing elit.
       Itaque libero sint inventore vel commodi explicabo nisi cumque, dolores
@@ -28,5 +27,11 @@
       distinctio consequatur quibusdam debitis illo odio, mollitia commodi harum
       nostrum. Velit, quidem.
     </div>
+    <a
+      href="https://fleiglesflyers.blogspot.com/p/essx-poles.html"
+      target="_blank"
+    >
+      <button class="equipment-btn">Equipment & Rentals</button>
+    </a>
   </div>
 </div>
