--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -28,6 +28,7 @@
 .content-outer {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 h2 {
@@ -47,4 +48,13 @@ h2 {
   background-color: var(--white);
   padding: 20px;
   border-radius: 20px;
+}
+
+.equipment-btn {
+  width: fit-content;
+  margin-top: 20px;
+  padding: 5px 20px;
+  border-radius: 10px;
+  font-size: 24px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.52);
 }
