--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -35,8 +35,12 @@ nav {
   }
   .title {
     position: absolute;
-    bottom: 20%;
+    bottom: 10%;
     padding: 10px 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     h1 {
       font-size: 6rem;
       text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.675);
@@ -100,6 +104,34 @@ nav {
 .link {
   color: var(--white);
   text-decoration: none;
+  transition: 0.2s;
+  &:not(.active):hover {
+    scale: 1.1;
+    text-shadow: 5px 5px 10px black;
+  }
+}
+
+.active {
+  background-color: white;
+  color: black;
+  padding: 3px 10px;
+  border-radius: 10px;
+  font-weight: bold;
+}
+
+.equipment-btn {
+  width: fit-content;
+  margin-top: 10px;
+  padding: 5px 20px;
+  border-radius: 10px;
+  font-size: 24px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.52);
+  transition: 0.2s;
+  &:hover {
+    scale: 1.02;
+    box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.441);
+    transform: rotate(2deg);
+  }
 }
 
 @media screen and (max-width: 1000px) {
